--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "core-js": "^2.5.4",
     "echarts": "^4.6.0",
     "ngx-echarts": "^4.2.2",
+    "ngx-quill": "^8.1.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
